HLS implementation